# who-judges-the-judge

./: .env.example  .gitignore  FAILURE_TAXONOMY.md  LICENSE  README.md  RESULTS.md  pyproject.toml
data/: example_predictions.jsonl  examples.jsonl  examples_hard.jsonl
prompts/: judge_prompt.md
reports/: example_report.json  openai-gpt-5-nano-core.json  openai-gpt-5-nano-hard.json  openai-gpt-5.5-core.json  openai-gpt-5.5-hard.json  together-gpt-oss-20b-reasoning-medium-core.json  together-gpt-oss-20b-reasoning-medium-hard.json
runners/: __init__.py  base.py  config.py  openai_runner.py  together_runner.py
schemas/: judge_prediction.schema.json
scripts/: dataset_options.py  plot_results.py  run_eval_matrix.py  run_judge.py  score_results.py  validate_data.py
src/persuasion_judge_audit/: __init__.py  io.py  metrics.py  models.py  reporting.py
tests/: test_dataset.py  test_dataset_options.py  test_eval_matrix.py  test_io.py  test_metrics.py  test_models.py  test_runners.py
