[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "persuasion-judge-audit"
version = "0.1.0"
description = "A compact audit of LLM-as-judge reliability in sanitized persuasion-risk scenarios."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Carlos" }]
dependencies = []

[project.optional-dependencies]
runner = ["openai>=2.0,<3"]
dev = ["pytest>=8.0", "openai>=2.0,<3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "."]
